useing PokeAPI APP

--- a/initTS/index.html
+++ b/initTS/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TypeScript Greeter</title>
 </head>
+
 <body>
-    
+    <h1>小長谷祐人</h1>
+    <p>乃木坂46、日向坂46</p>
     <script src="greeter.js"></script>
 </body>
+
 </html>
