--- a/Pokedex/index.html
+++ b/Pokedex/index.html
@@ -14,7 +14,7 @@
         <div id="app"></div>
     </main>
 
-    <script src="src/app.js"></script>
+    <script src="public/js/app.js"></script>
 </body>
 
 </html>
