1. async,awaitの使用 2. リファクタリングで処理を共通化

--- a/JScode/index.html
+++ b/JScode/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+<ol id="lists"></ol>
+<button id="addBtn">add</button>
+
 <body>
   <script src="webApi.js"></script>
+  <!-- <script src="./FunctionTutorial.js"></script> -->
 </body>
+
 </html>
